2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (execute_command): Make first argument
	a const char *.
	(read_file): Avoid shadowing.
	Reuse underlying error message if device open fails.
	(cmd_cmp): Respect format security.
	(root): Make const char *.
	(fstest): Remove args argument and use global copy.
	Respect format security.
	(argp_parser): Make static.
	(main): Make default_root const char *.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mount.c (root): Make const char *.
	(execute_command): Make first argument a const char *.
	(fuse_init): Respect format security.
	(argp_parser): Make static. Remove unused variable.
	(main):  Make default_root a const char *.
	Respect format security.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-probe.c (probe): Don't call gettext on already translated
	grub_errmsg.
	Remove unused variables.
	(argp_parser): Remove unused variable.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-script-check.c (argp_parser): Remove unused variable.
	(main): Rename read to curread to avoid shadowing.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/misc.c (grub_util_write_image_at): Fix format specification.
	(grub_util_write_image): Likewise.
	(grub_script_execute_argument_to_string): Removed (unused).
	(grub_script_execute_menuentry): Likewise.
	(grub_putchar): Likewise.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/symbol.h (EXT_C) [GRUB_UTIL]: Removed.
	(FUNCTION) [GRUB_UTIL]: Likewise.
	(VARIABLE) [GRUB_UTIL]: Likewise.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h: Avoid evaluationg NEED_ENABLE_EXECUTE_STACK and
	NEED_REGISTER_FRAME_INFO in GRUB_UTIL.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/bsdlabel.c (iterate_real): Fix freeing of static
	buffer.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>
